--- a/brew_crew/pubspec.yaml
+++ b/brew_crew/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
   cloud_firestore: ^2.2.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
