--- a/brew_crew/pubspec.yaml
+++ b/brew_crew/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^1.2.0
   cloud_firestore: ^2.2.0
   provider: ^5.0.0
+  flutter_spinkit: "^4.0.0"
 
 dev_dependencies:
   flutter_test:
